# ml-audit

./: .gitignore  CHANGELOG.md  FUNDING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: FUNDING.yml
examples/: sample_drf_views.py
sample_project/sample_project/: settings.py  urls.py  views.py
src/ml_audit/: __init__.py  admin.py  apps.py  conf.py  models.py
src/ml_audit/api/: __init__.py  serializers.py  urls.py  views.py
src/ml_audit/integrations/: drf.py
src/ml_audit/migrations/: 0001_initial.py
src/ml_audit/services/: __init__.py  explanations.py  recording.py
tests/: settings.py  test_attach_explanation.py  test_drf_integrations.py  test_idempotency.py  test_immutability.py  test_models_sanity.py  test_record_prediction_event.py  test_redaction.py  test_smoke.py  urls.py
